<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".health">

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="215dp"
        android:layout_height="92dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="193dp"
        android:layout_marginRight="193dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lines="3"
        android:text="@string/health_ntip_of_the_n_day"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:hint="@string/health_ntip_of_the_n_day"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextMultiLine3"
        android:layout_width="361dp"
        android:layout_height="360dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="37dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/sugary_drinks_are_among_the_most_fattening_items_you_can_put_into_your_body_this_is_because_your_brain_doesn_t_measure_calories_from_liquid_sugar_the_same_way_it_does_for_solid_food_therefore_when_you_drink_soda_you_end_up_eating_more_total_calories_sugary_drinks_are_strongly_associated_with_obesity_type_2_diabetes_heart_disease_and_many_other_health_problems_keep_in_mind_that_certain_fruit_juices_may_be_almost_as_bad_as_soda_in_this_regard_as_they_sometimes_contain_just_as_much_sugar_their_small_amounts_of_antioxidants_do_not_negate_the_sugar_s_harmful_effects"
        android:text="@string/sugary_drinks_are_among_the_most_fattening_items_you_can_put_into_your_body_this_is_because_your_brain_doesn_t_measure_calories_from_liquid_sugar_the_same_way_it_does_for_solid_food_therefore_when_you_drink_soda_you_end_up_eating_more_total_calories_sugary_drinks_are_strongly_associated_with_obesity_type_2_diabetes_heart_disease_and_many_other_health_problems_keep_in_mind_that_certain_fruit_juices_may_be_almost_as_bad_as_soda_in_this_regard_as_they_sometimes_contain_just_as_much_sugar_their_small_amounts_of_antioxidants_do_not_negate_the_sugar_s_harmful_effects"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine2"
        android:autofillHints="" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="59dp"
        android:background="#00FF00"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="68dp"
        android:layout_height="64dp"
        android:layout_marginStart="327dp"
        android:layout_marginLeft="327dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="147dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logomediq"
        android:contentDescription="@string/todo" />
</androidx.constraintlayout.widget.ConstraintLayout>